// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrendLine when rendered with a negative trendline should render correcly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative"
        style="width: 100%; height: 100%;"
      >
        <svg
          height="0"
          width="0"
        >
          <g
            class="visx-group"
            transform="translate(1, 1)"
          >
            <path
              class="visx-area text-red"
              d="M-0.6666666666666667,0L-1.3333333333333335,-1L-2,-2L-2,-2L-1.3333333333333335,-1L-0.6666666666666667,0Z"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="1"
            />
            <circle
              class="visx-circle text-red"
              cx="-2"
              cy="-2"
              fill="currentColor"
              r="1"
            />
          </g>
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative"
      style="width: 100%; height: 100%;"
    >
      <svg
        height="0"
        width="0"
      >
        <g
          class="visx-group"
          transform="translate(1, 1)"
        >
          <path
            class="visx-area text-red"
            d="M-0.6666666666666667,0L-1.3333333333333335,-1L-2,-2L-2,-2L-1.3333333333333335,-1L-0.6666666666666667,0Z"
            stroke="currentColor"
            stroke-linejoin="round"
            stroke-width="1"
          />
          <circle
            class="visx-circle text-red"
            cx="-2"
            cy="-2"
            fill="currentColor"
            r="1"
          />
        </g>
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TrendLine when rendered with a neutral trendline should render correcly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative"
        style="width: 100%; height: 100%;"
      >
        <svg
          height="0"
          width="0"
        >
          <g
            class="visx-group"
            transform="translate(1, 1)"
          >
            <path
              class="visx-area text-gray-200"
              d="M-0.6666666666666667,-2L-1.3333333333333335,0L-2,-2L-2,-2L-1.3333333333333335,0L-0.6666666666666667,-2Z"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="1"
            />
            <circle
              class="visx-circle text-gray-200"
              cx="-2"
              cy="-2"
              fill="currentColor"
              r="1"
            />
          </g>
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative"
      style="width: 100%; height: 100%;"
    >
      <svg
        height="0"
        width="0"
      >
        <g
          class="visx-group"
          transform="translate(1, 1)"
        >
          <path
            class="visx-area text-gray-200"
            d="M-0.6666666666666667,-2L-1.3333333333333335,0L-2,-2L-2,-2L-1.3333333333333335,0L-0.6666666666666667,-2Z"
            stroke="currentColor"
            stroke-linejoin="round"
            stroke-width="1"
          />
          <circle
            class="visx-circle text-gray-200"
            cx="-2"
            cy="-2"
            fill="currentColor"
            r="1"
          />
        </g>
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TrendLine when rendered with a positive trendline should render correcly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative"
        style="width: 100%; height: 100%;"
      >
        <svg
          height="0"
          width="0"
        >
          <g
            class="visx-group"
            transform="translate(1, 1)"
          >
            <path
              class="visx-area text-teal"
              d="M-0.6666666666666667,-2L-1.3333333333333335,-1L-2,0L-2,0L-1.3333333333333335,-1L-0.6666666666666667,-2Z"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="1"
            />
            <circle
              class="visx-circle text-teal"
              cx="-2"
              cy="0"
              fill="currentColor"
              r="1"
            />
          </g>
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative"
      style="width: 100%; height: 100%;"
    >
      <svg
        height="0"
        width="0"
      >
        <g
          class="visx-group"
          transform="translate(1, 1)"
        >
          <path
            class="visx-area text-teal"
            d="M-0.6666666666666667,-2L-1.3333333333333335,-1L-2,0L-2,0L-1.3333333333333335,-1L-0.6666666666666667,-2Z"
            stroke="currentColor"
            stroke-linejoin="round"
            stroke-width="1"
          />
          <circle
            class="visx-circle text-teal"
            cx="-2"
            cy="0"
            fill="currentColor"
            r="1"
          />
        </g>
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
